[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "docling-analysis-framework"
dynamic = ["version"]
description = "AI-ready analysis framework for PDF and Office documents using Docling for content extraction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Building Blocks", email = "wjackson@redhat.com"}
]
keywords = ["docling", "pdf", "office", "ai", "ml", "document-processing", "semantic-search", "chunking"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Office Suites",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "docling>=1.0.0",  # Main dependency for document processing
]

[project.urls]
Homepage = "https://github.com/rdwj/docling-analysis-framework"
Repository = "https://github.com/rdwj/docling-analysis-framework"
Issues = "https://github.com/rdwj/docling-analysis-framework/issues"
Documentation = "https://github.com/rdwj/docling-analysis-framework/blob/main/README.md"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
docs = [
    "sphinx>=3.0",
    "sphinx_rtd_theme>=0.5",
]

[project.scripts]
docling-analyze = "docling_analysis_framework.examples.basic_analysis:main"
docling-analyze-enhanced = "docling_analysis_framework.examples.enhanced_analysis:main"

[tool.setuptools]
package-dir = {"docling_analysis_framework" = "src"}

[tool.setuptools_scm]
write_to = "src/docling_analysis_framework/_version.py"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true 